# Holonet-HTTP-Server

./: Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs
src/app/download/: mod.rs  urls.rs  views.rs
src/app/upload/: urls.rs  views.rs
src/utils/: errors.rs  utils.rs
static/templates/: home.html
