[package]
name = "holonet"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = { version = "4.10.2", features = ["rustls-0_23"] }
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
env_logger = "0.11.8"
futures = "0.3.31"
futures-util = "0.3.31"
ifcfg = "0.1.2"
log = "0.4.27"
path-clean = "1.0.1"
rcgen = "0.13.2"
rustls = "0.23.26"
rustls-pemfile = "2.2.0"
sanitize-filename = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
tokio = { version = "1.44.2", features = ["fs"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
